theme(styles): fix some contrast accessibility issues

--- a/assets/scss/components/_alerts.scss
+++ b/assets/scss/components/_alerts.scss
@@ -9,4 +9,8 @@
 
   }
 
+  a {
+    color: $color-blue-5;
+    @extend .alert-link;
+  }
 }
